--- a/Open_edX.ipynb
+++ b/Open_edX.ipynb
@@ -82,7 +82,7 @@
     "\n",
     "- [blog.just4fun.site](http://blog.just4fun.site)\n",
     "\n",
-    "- github.com/wwj718\n",
+    "- [github.com/wwj718](github.com/wwj718)\n",
     "\n",
     "\n",
     "#### Contact\n",
@@ -137,6 +137,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "新标签页打开大图"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -167,11 +181,7 @@
     ">>> (131 + 21.5 + 100.2 + 88.7 + 99.5 + 100.5 + 200.5)/4\n",
     "185.475\n",
     "```\n",
-    "\n",
-    "\n",
-    "*Python 3 is my favorite calculator (not Python 2 because 1/2 = 0)*\n",
-    "\n",
-    "Beyond basic operations:\n"
+    "\n"
    ]
   },
   {
@@ -214,21 +224,32 @@
    },
    "source": [
     "\n",
-    "### Unit conversion functions\n",
+    "### The Zen of Python\n",
     "\n",
     "```python\n",
     "\n",
-    ">>> unit_conversion()\n",
-    "1. Kilometers to Miles\n",
-    "2. Miles to Kilometers\n",
-    "3. Kilograms to Pounds\n",
-    "4. Pounds to Kilograms\n",
-    "5. Celsius to Fahrenheit\n",
-    "6. Fahrenheit to Celsius\n",
-    "Which conversion would you like to do? 6\n",
-    "Enter temperature in fahrenheit: 98\n",
-    "Temperature in celsius: 36.66666666666667\n",
-    ">>> \n",
+    ">>> import this\n",
+    "The Zen of Python , by Tim Peters\n",
+    "\n",
+    "Beautiful is better than ugly.\n",
+    "Explicit is better than implicit.\n",
+    "Simple is better than complex.\n",
+    "Complex is better than complicated.\n",
+    "Flat is better than nested.\n",
+    "Sparse is better than dense.\n",
+    "Readability counts.\n",
+    "Special cases aren't special enough to break the rules.\n",
+    "Although practicality beats purity.\n",
+    "Errors should never pass silently.\n",
+    "Unless explicitly silenced.\n",
+    "In the face of ambiguity, refuse the temptation to guess.\n",
+    "There should be one-- and preferably only one --obvious way to do it.\n",
+    "Although that way may not be obvious at first unless you're Dutch.\n",
+    "Now is better than never.\n",
+    "Although never is often better than *right* now.\n",
+    "If the implementation is hard to explain, it's a bad idea.\n",
+    "If the implementation is easy to explain, it may be a good idea.\n",
+    "Namespaces are one honking great idea -- let's do more of those!\n",
     "\n",
     "```"
    ]
@@ -362,21 +383,21 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.4.1"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.5"
   },
   "toc": {
    "toc_cell": false,
