结构基本确定

--- a/Open_edX.ipynb
+++ b/Open_edX.ipynb
@@ -74,6 +74,44 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "source": [
+    "### The Zen of Python\n",
+    "\n",
+    "```python\n",
+    "\n",
+    ">>> import this\n",
+    "The Zen of Python , by Tim Peters\n",
+    "\n",
+    "Beautiful is better than ugly.\n",
+    "Explicit is better than implicit.\n",
+    "Simple is better than complex.\n",
+    "Complex is better than complicated.\n",
+    "Flat is better than nested.\n",
+    "Sparse is better than dense.\n",
+    "Readability counts.\n",
+    "Special cases aren't special enough to break the rules.\n",
+    "Although practicality beats purity.\n",
+    "Errors should never pass silently.\n",
+    "Unless explicitly silenced.\n",
+    "In the face of ambiguity, refuse the temptation to guess.\n",
+    "There should be one-- and preferably only one --obvious way to do it.\n",
+    "Although that way may not be obvious at first unless you're Dutch.\n",
+    "Now is better than never.\n",
+    "Although never is often better than *right* now.\n",
+    "If the implementation is hard to explain, it's a bad idea.\n",
+    "If the implementation is easy to explain, it may be a good idea.\n",
+    "Namespaces are one honking great idea -- let's do more of those!\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "subslide"
     }
    },
@@ -171,48 +209,7 @@
     }
    },
    "source": [
-    "### Python - a scientific calculator\n",
-    "\n",
-    "\n",
-    "\n",
-    "Whose calculator looks like this?\n",
-    "\n",
-    "```python\n",
-    ">>> (131 + 21.5 + 100.2 + 88.7 + 99.5 + 100.5 + 200.5)/4\n",
-    "185.475\n",
-    "```\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "- 这是内联弹出\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "### Python - a scientific calculator\n",
-    "\n",
-    "- Develop your own functions: unit conversion, finding correlation, .., anything really\n",
-    "\n",
-    "- Use PYTHONSTARTUP to extend the battery of readily available mathematical functions\n",
-    "\n",
-    "```python\n",
-    ">>> PYTHONSTARTUP=~/work/dmwp/pycon-us-2016/startup_math.py idle3 -s\n",
-    "```\n",
-    "\n"
+    "# 核心组件"
    ]
   },
   {
@@ -223,35 +220,40 @@
     }
    },
    "source": [
-    "\n",
-    "### The Zen of Python\n",
+    "## LMS\n",
     "\n",
     "```python\n",
-    "\n",
-    ">>> import this\n",
-    "The Zen of Python , by Tim Peters\n",
-    "\n",
-    "Beautiful is better than ugly.\n",
-    "Explicit is better than implicit.\n",
-    "Simple is better than complex.\n",
-    "Complex is better than complicated.\n",
-    "Flat is better than nested.\n",
-    "Sparse is better than dense.\n",
-    "Readability counts.\n",
-    "Special cases aren't special enough to break the rules.\n",
-    "Although practicality beats purity.\n",
-    "Errors should never pass silently.\n",
-    "Unless explicitly silenced.\n",
-    "In the face of ambiguity, refuse the temptation to guess.\n",
-    "There should be one-- and preferably only one --obvious way to do it.\n",
-    "Although that way may not be obvious at first unless you're Dutch.\n",
-    "Now is better than never.\n",
-    "Although never is often better than *right* now.\n",
-    "If the implementation is hard to explain, it's a bad idea.\n",
-    "If the implementation is easy to explain, it may be a good idea.\n",
-    "Namespaces are one honking great idea -- let's do more of those!\n",
-    "\n",
+    ">>> sudo -u www-data /edx/bin/python.edxapp /edx/app/edxapp/edx-platform/manage.py lms runserver 0.0.0.0:5000 --settings devstack\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## CMS\n",
+    "```python\n",
+    ">>> sudo -u www-data /edx/bin/python.edxapp /edx/app/edxapp/edx-platform/manage.py cms runserver 0.0.0.0:5000 --settings devstack\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## insights\n",
+    "\n",
+    "![problem_display_name](http://edx.readthedocs.io/projects/edx-insights/en/latest/_images/problem_display_name.png)"
    ]
   },
   {
@@ -262,13 +264,89 @@
     }
    },
    "source": [
-    "### Python - a really fancy calculator\n",
-    "\n",
-    "SymPy - a pure Python symbolic math library\n",
-    "\n",
-    "*from sympy import awesomeness*  - don't try that :)\n",
-    "\n",
-    "\n"
+    "# 复杂性"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "* 大而杂\n",
+    "* 文档匮乏\n",
+    "* 变化激烈"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# 异构\n",
+    "*  Python Nodejs Ruby \n",
+    "*  Mysql MongoDB \n",
+    "*  Backbone.js Require.js\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# RESTful\n",
+    "*  多组件/服务\n",
+    "*  API\n",
+    "*  OAuth2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# 扩展性\n",
+    "*  XBlock\n",
+    "*  LTI"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "#  开放性\n",
+    "*  API\n",
+    "*  data\n",
+    "*  LTI\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# 未来\n",
+    "*  生态系统\n",
+    "    *  课程是跑在edx上的开源软件\n",
+    "*  开放教育"
    ]
   },
   {
@@ -298,53 +376,6 @@
     "from sympy import Symbol, plot\n",
     "x = Symbol('x')\n",
     "p = plot(2*x**2 + 2*x + 2)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAD8AAAAgCAYAAACl36CRAAAABHNCSVQICAgIfAhkiAAAAz1JREFU\nWIXt2F2IVVUUwPFfNupY0xiWMVSQ5RA+RGqGSEEfUOBDRBhCpEQEEfZikA8FJVNmPYQGRUUWRGhf\nGBGFgQlFghQGGfViH48loUZfZCNO2cM61zkczzl3n+F6nZj7h8Pcs/bea609e5211jn0mJqc0WV7\nxzugo9s+d4wP0X+6nWgxrYu2luNTjHbR5qThfQyebifydOvkr8XX+KNL9iYV2zH3FNtY0XRBN05+\nIQ7g0Cm0sQB3NV3U12Z8HabjqYl4lPEgHqkZX4qHMAsXYy/W46cGNu7EmwXZMtyHvzPds7AR36Qo\nvAR/YaSBE0WG8UrN+FX4COdm9wPYjYOY18DOl2JzLRaLBJsvqy+InLMoReEW0ZSMNHCiyEsiJKvY\nIf5BeRZndt9KtLEUWwuyZzIdK3OyWzLZsy1B1TO/Ah8nGD6nZuyibHx/zZzrMzsX5GT78BtuSrAP\nq/BGQbZPnPLvJb4eqVM2YDxUq07+LLyO52v0bMKSOkPi+TuKSwvyn8Uj144zRQltl7vgaYyJBFzJ\nRszPfpdtvk8ksA34U3njMgfvJjh0NoYKsgszu58krL9Z/QG0mC+qzZq6SYvwcO6+7pmfI0JobcnY\nY7gxwakynsQ/uCZh7quigariNjyH78S+Kl+KpuE1zMjJ2iW8l/FtQemASGQT4TIRTU8kzO3HV9Le\n8maISNqD88omrHHyabXb/MJszvKcbB1uTXCoyEx8js2J82/XrP+4Qfi6vTgwJMKjSEqp2238pGdi\np4m9c2/F4w3mv4MrKsYW4MqCbFDs518RnSdYjV14L3ftyCbvz+6reueVmcJh0VGtarCBFiN4tCCr\na1dni06wjEHR1Y0ZT9xEcj2eXbPbOTRP2sn34UfRPOwS5acJq5Wf+JaaNfeIlriMfhzD9yIpt7ha\n7OeLlqCuPk4v/K1iDC+K0ne/yNSpXCe6sZ3YlpP3qf/kdQfurRgbFTX9IH7NydeK3qG23A2KzHgg\nc2AUn4myUcVc/KD5J6pfjIdi8dpQsWZIfBFqx92iRd4mIvJtXN7Qv0nHAyLCpiR7cH4nFHXzA2Yn\nGBYvPYc7oez/tvmyjxZThg8UGpQePXr0SOU/HGujJYdjWBcAAAAASUVORK5CYII=\n",
-      "text/latex": [
-       "$$\\frac{4 \\sqrt{2}}{3}$$"
-      ],
-      "text/plain": [
-       "4⋅√2\n",
-       "────\n",
-       " 3  "
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Definite integral\n",
-    "\n",
-    "from sympy import Symbol, Integral, sqrt\n",
-    "x = Symbol('x')\n",
-    "Integral(sqrt(x), (x, 0, 2)).doit()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "<center><h1>Can we do more than write smart calculators?</h1></center>\n",
-    "\n"
    ]
   },
   {
