--- a/Open_edX.ipynb
+++ b/Open_edX.ipynb
@@ -26,7 +26,8 @@
     ".reveal h1, .reveal h2 {\n",
     "    font-family:\"League Gothic\"\n",
     "}\n",
-    "</style>"
+    "// 通过写css来控制布局\n",
+    "</style>\n"
    ]
   },
   {
@@ -112,32 +113,94 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "source": [
-    "## About me\n",
-    "\n",
-    "- [blog.just4fun.site](http://blog.just4fun.site)\n",
-    "\n",
-    "- [github.com/wwj718](github.com/wwj718)\n",
-    "\n",
-    "\n",
-    "#### Contact\n",
-    "\n",
-    "\n",
-    "- [Email](mailto:wuwenjie718@gmail.com)\n"
+    "> #  如果你不能最终告诉别人你一直在做什么，那么，你的研究将一文不值  \n",
+    "<h2 style=\"float:right\">--薛定谔</h2>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "notes"
+     "slide_type": "slide"
     }
    },
    "source": [
-    "So, what am I selling to you today? Open edX Architecture.\n"
+    "# <center> About me  </center>\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "##  我做过的一些东西 <!--开源--> \n",
+    "*  [edx_siteapi](https://github.com/wwj718/edx_siteapi)：RESTful API for edx studio and lms（CRUD）\n",
+    "*  [django_cas_server_lite](https://github.com/wwj718/django_cas_server_lite)：基于django的精简cas服务器\n",
+    "*  [course_backup](https://github.com/wwj718/course_backup)：edx自动化课程备份工具（pip包）\n",
+    "*  [edx_tools](https://github.com/wwj718/edx_tools):在本地管理和调试远程edx服务器\n",
+    "*  [cookiecutter-xblock](https://github.com/wwj718/cookiecutter-xblock):xblock生成器\n",
+    "*  [edx_cypress_docker](https://github.com/wwj718/edx_cypress_docker):Open edX的docker封装"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## github and blog\n",
+    "- [blog.just4fun.site](http://blog.just4fun.site)\n",
+    "\n",
+    "- [github.com/wwj718](github.com/wwj718)\n",
+    "\n",
+    "\n",
+    "## Contact\n",
+    "\n",
+    "- Email: [wuwenjie718@gmail.com]((mailto:wuwenjie718@gmail.com)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "# 我的兴趣\n",
+    "*  开源技术/教育信息化\n",
+    "*  网站架构/分布式\n",
+    "*  数据分析/数据采集（爬虫）/可视化\n",
+    "*  机器学习/AI\n",
+    "*  信息安全/密码学\n",
+    "*  区块链/以太坊\n",
+    "*  科幻/武侠小说/旧体诗词/分析哲学\n",
+    "*  骑车/爬山/台球/跑步/逛书店"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "一无所精"
    ]
   },
   {
@@ -149,10 +212,10 @@
    },
    "source": [
     "\n",
-    "### 新旧架构\n",
+    "# 新旧架构图\n",
     "\n",
     "\n",
-    "有何不同? *Next slides*\n",
+    "有何不同? \n",
     "\n",
     "\n",
     "\n",
@@ -213,6 +276,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "引旧版\n",
+    "新版：http://edx.readthedocs.io/projects/edx-developer-guide/en/latest/architecture.html"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -220,11 +298,36 @@
     }
    },
    "source": [
-    "## LMS\n",
+    "## Learning Management System (LMS)\n",
     "\n",
     "```python\n",
     ">>> sudo -u www-data /edx/bin/python.edxapp /edx/app/edxapp/edx-platform/manage.py lms runserver 0.0.0.0:5000 --settings devstack\n",
-    "```"
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### 前端\n",
+    "\n",
+    "<img  style=\"float:right;\" src=\"https://leanote.com/api/file/getImage?fileId=57879b2cab644135ea00eba9\" href=\"https://leanote.com/api/file/getImage?fileId=57879b2cab644135ea00eba9\"></img>\n",
+    "\n",
+    "*  Mako\n",
+    "*  JavaScript / CoffeeScrip\n",
+    "    *  Backbone.js\n",
+    "*  css\n",
+    "    *  Sass \n",
+    "    *  Bourbon framework\n",
+    "*  其他\n",
+    "    *  requirejs\n",
+    "    *  underscore.js\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -236,7 +339,7 @@
     }
    },
    "source": [
-    "## CMS\n",
+    "## Studio（CMS）\n",
     "```python\n",
     ">>> sudo -u www-data /edx/bin/python.edxapp /edx/app/edxapp/edx-platform/manage.py cms runserver 0.0.0.0:5000 --settings devstack\n",
     "```"
@@ -245,15 +348,68 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Discussions\n",
+    "*   Ruby \n",
+    "    *  Sinatra\n",
+    "*  MongoDB"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
     "collapsed": true,
     "slideshow": {
      "slide_type": "subslide"
     }
    },
    "source": [
-    "## insights\n",
+    "## Analytics\n",
+    "*  \n",
+    "*  \n",
+    "*  \n",
+    "\n",
     "\n",
     "![problem_display_name](http://edx.readthedocs.io/projects/edx-insights/en/latest/_images/problem_display_name.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Background Work\n",
+    "*  Celery \n",
+    "*  RabbitMQ\n",
+    "*  场景\n",
+    "    *  群发邮件\n",
+    "    *  成绩单导出\n",
+    "    *  生成证书\n",
+    "    *  XQUEUE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Search\n",
+    "*  Elasticsearch\n",
+    "*  场景\n",
+    "    *  笔记系统\n",
+    "    *  课程搜索\n",
+    "    *  内容搜索\n",
+    "    *  论坛搜索"
    ]
   },
   {
@@ -275,7 +431,9 @@
     }
    },
    "source": [
-    "* 大而杂\n",
+    "* 项目大\n",
+    "* 组件多\n",
+    "* 技术新\n",
     "* 文档匮乏\n",
     "* 变化激烈"
    ]
@@ -303,9 +461,18 @@
    },
    "source": [
     "# RESTful\n",
-    "*  多组件/服务\n",
+    "*  多组件/服务化\n",
     "*  API\n",
-    "*  OAuth2"
+    "*  OAuth2\n",
+    "*  例子\n",
+    "    *  insight\n",
+    "    *  笔记系统\n",
+    "        *  开放出来\n",
+    "            *  https://note.just4fun.site\n",
+    "    *  与外部系统聚合\n",
+    "        *  rocket chat\n",
+    "        *  在线编程\n",
+    "* siteapi"
    ]
   },
   {
@@ -318,7 +485,30 @@
    "source": [
     "# 扩展性\n",
     "*  XBlock\n",
-    "*  LTI"
+    "    *  通用iframe组件\n",
+    "*  LTI\n",
+    "    *  bbb\n",
+    "    *  canvas\n",
+    "*  embedded Python code\n",
+    "*  JS Input\n",
+    "    *  案例\n",
+    "        *  外部题库\n",
+    "        *  外部编程\n",
+    "    *  特性：非侵入性，聚合资源，纳入edx评价体系"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "贴图"
    ]
   },
   {
@@ -332,7 +522,12 @@
     "#  开放性\n",
     "*  API\n",
     "*  data\n",
-    "*  LTI\n"
+    "    *  学习行为\n",
+    "    *  成绩数据（mit开发64w匿名数据）\n",
+    "*  LTI\n",
+    "*  Open Learning XML (OLX)\n",
+    "    *  spoc\n",
+    "        *  整合既有课程"
    ]
   },
   {
@@ -355,7 +550,7 @@
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "skip"
     }
    },
    "outputs": [
@@ -382,7 +577,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     }
    },
    "source": [
@@ -405,9 +600,43 @@
    "source": [
     "### Links\n",
     "\n",
+    "- [Open edX体系架构(旧版)[译文]](http://blog.just4fun.site/Open-edX-Architecture-Translation.html)\n",
     "- [Open edX Architecture](https://edx.readthedocs.io/projects/edx-developer-guide/en/latest/architecture.html)\n",
-    "\n",
+    "    -  [Hosting Architecture at edX(slides)](https://docs.google.com/viewer?url=https%3A%2F%2Fedxportal.s3.amazonaws.com%2Fresources%2FHosting_for_edX_0.pdf%3FAWSAccessKeyId%3DAKIAIA5GG43VEZFEWO5Q%26Expires%3D1468502703%26Signature%3D7cSUQ%252FUMscE7hzz1VfZ3tfZfJXA%253D)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# 准备开源的项目\n",
+    "### 数据分析\n",
+    "*  基于elk的track log实时数据分析\n",
+    "*  基于caravel的数据库挖掘和可视化\n",
+    "*  基于pandas的数据探索\n",
+    "### \n",
+    "*  Open edX的"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "outputs": [],
+   "source": [
+    ">  如果没有更多的精力推进一个有趣的想法，最好的方式就是将它开源\n",
+    ">  学习一样东西的最好方式就是去将它教授给其他人\n",
+    ">  如果你不能最终告诉别人你一直在做什么，那么你的研究就一文不值"
    ]
   }
  ],
