增加图片内容

--- a/OpenedX_and_IM.ipynb
+++ b/OpenedX_and_IM.ipynb
@@ -107,6 +107,26 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "![]( https://leanote.com/api/file/getImage?fileId=5788b116ab644135ea01001e)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"https://leanote.com/api/file/getImage?fileId=5788b116ab644135ea01001d\" style=\"float:left\" />\n",
+    "\n",
+    "![](https://leanote.com/api/file/getImage?fileId=5788b116ab644135ea01001c)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "slide"
     }
    },
