--- a/Open_edX.ipynb
+++ b/Open_edX.ipynb
@@ -294,7 +294,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -328,6 +328,18 @@
     "    *  underscore.js\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "# 项目结构\n",
+    "![](https://leanote.com/api/file/getImage?fileId=578a49afab644135ea01193d)"
    ]
   },
   {
@@ -369,12 +381,12 @@
    },
    "source": [
     "## Analytics\n",
-    "*  \n",
-    "*  \n",
-    "*  \n",
+    "*  edx-analytics-dashboard\n",
+    "*  edx-analytics-pipeline\n",
+    "*  edx-analytics-data-api\n",
     "\n",
     "\n",
-    "![problem_display_name](http://edx.readthedocs.io/projects/edx-insights/en/latest/_images/problem_display_name.png)"
+    "![架构](https://edx.readthedocs.io/projects/edx-developer-guide/en/latest/_images/edx-architecture-analytics.png)"
    ]
   },
   {
@@ -446,7 +458,7 @@
     }
    },
    "source": [
-    "# 异构\n",
+    "## 异构\n",
     "*  Python Nodejs Ruby \n",
     "*  Mysql MongoDB \n",
     "*  Backbone.js Require.js\n"
@@ -472,7 +484,20 @@
     "    *  与外部系统聚合\n",
     "        *  rocket chat\n",
     "        *  在线编程\n",
-    "* siteapi"
+    "* siteapi\n",
+    "    *  spoc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### 服务组件化带来的好处(易于分布式)\n",
+    "![](https://leanote.com/api/file/getImage?fileId=578a5098ab644133ed01154d)"
    ]
   },
   {
@@ -494,7 +519,8 @@
     "    *  案例\n",
     "        *  外部题库\n",
     "        *  外部编程\n",
-    "    *  特性：非侵入性，聚合资源，纳入edx评价体系"
+    "    *  特性：非侵入性，聚合资源，纳入edx评价体系\n",
+    "*  djangoapp"
    ]
   },
   {
@@ -523,7 +549,7 @@
     "*  API\n",
     "*  data\n",
     "    *  学习行为\n",
-    "    *  成绩数据（mit开发64w匿名数据）\n",
+    "    *  成绩数据（匿名数据）\n",
     "*  LTI\n",
     "*  Open Learning XML (OLX)\n",
     "    *  spoc\n",
@@ -614,25 +640,21 @@
     }
    },
    "source": [
-    "# 准备开源的项目\n",
+    "# 计划开源的项目\n",
     "### 数据分析\n",
     "*  基于elk的track log实时数据分析\n",
     "*  基于caravel的数据库挖掘和可视化\n",
-    "*  基于pandas的数据探索\n",
-    "### \n",
-    "*  Open edX的"
+    "*  基于pandas的数据探索\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true,
     "slideshow": {
      "slide_type": "notes"
     }
    },
-   "outputs": [],
    "source": [
     ">  如果没有更多的精力推进一个有趣的想法，最好的方式就是将它开源\n",
     ">  学习一样东西的最好方式就是去将它教授给其他人\n",
